# internal/handler/dto.go
@@ -38,23 +38,37 @@ func (r *SubscriptionRequest) ToModel() (*model.Subscription, error) {
 }
 
 type SubscriptionResponse struct {
-	ID          int        `json:"id"`
-	ServiceName string     `json:"service_name"`
-	Price       int        `json:"price"`
-	UserID      uuid.UUID  `json:"user_id"`
-	StartDate   time.Time  `json:"start_date"`
-	EndDate     *time.Time `json:"end_date"`
+	ID          int       `json:"id"`
+	ServiceName string    `json:"service_name"`
+	Price       int       `json:"price"`
+	UserID      uuid.UUID `json:"user_id"`
+	StartDate   string    `json:"start_date"`
+	EndDate     *string   `json:"end_date,omitempty"`
 }
 
 func NewSubscriptionResponse(m *model.Subscription) *SubscriptionResponse {
+	var endDatePtr *string
+
+	if m.EndDate != nil {
+		endDateStr := m.EndDate.Format("01-2006")
+		endDatePtr = &endDateStr
+	}
 	return &SubscriptionResponse{
 		ID:          m.ID,
 		ServiceName: m.ServiceName,
 		Price:       m.Price,
 		UserID:      m.UserID,
-		StartDate:   m.StartDate,
-		EndDate:     m.EndDate,
+		StartDate:   m.StartDate.Format("01-2006"),
+		EndDate:     endDatePtr,
 	}
+}
+
+func NewSubscriptionsResponse(subs []model.Subscription) []SubscriptionResponse {
+	response := make([]SubscriptionResponse, 0, len(subs))
+	for _, sub := range subs {
+		response = append(response, *NewSubscriptionResponse(&sub))
+	}
+	return response
 }
 
 type CalculateTotalCostResponse struct {
